:books: docs: Atualização build do pom.xml para rodar o jar

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -110,7 +110,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>school.sptech.Main</mainClass>
+                            <mainClass>com.backend.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
