--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -76,6 +76,12 @@
             <version>5.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.slack.api</groupId>
+            <artifactId>slack-api-client</artifactId>
+            <version>1.44.2</version>
+        </dependency>
+
         <!-- Biblioteca de log para SLF4J -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
