--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,9 +21,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t gusttarizerio/vertex:imagem-java-vertex .
+          docker build -t gusttarizerio/vertex:imagem-java-vertex -t gusttarizerio/vertex:latest .
 
 
-      - name: Push Docker image
+      - name: Build Docker image
         run: |
-          docker push gusttarizerio/vertex:imagem-java-vertex
+          docker build --no-cache -t gusttarizerio/vertex:imagem-java-vertex -t gusttarizerio/vertex:latest .
